--- a/my_app/public/index.html
+++ b/my_app/public/index.html
@@ -33,7 +33,19 @@
 
     @media screen and (max-width: 600px) {
       div.example {
-        font-size: 15px;
+        font-size: 18px;
+      }
+    }
+
+    @media screen and (min-width: 601px) {
+      div.example2 {
+        font-size: 20px;
+      }
+    }
+
+    @media screen and (max-width: 600px) {
+      div.example2 {
+        font-size: 18px;
       }
     }
   </style>
